# ui-auditor-env

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  architecture.md  devpost_pitch.txt  docker-compose.yml  env.py  graders.py  inference.py  openenv.yaml  preflight.py  preflight_v2.py  presentation.md  pyproject.toml  requirements.txt  run_all_tests.py  run_tests.bat  run_tests.sh  test.py  test_local.py  test_reset.py
server/: app.py
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx  styles.css  theme.css  types.ts
web/src/lib/: api.ts
